--- a/index.html
+++ b/index.html
@@ -17,9 +17,37 @@
         will inspire others along the way.
       </p>
     </header>
-    <div class="blog-entry">
-      <h2>July 2, 2022</h2>      
-      <p><span class="blog-date">11:30 AM : </span>Start by making this document and uploading it to netlify.</p>
-    </div>
+    <!-- Goals section -->
+    <section id="goals">
+      <div id="goals-description">
+        <h2>My Goals</h2>
+      </div>
+      <div id="goals-grid">
+        <div class="goal-card">
+          <h2>Wandering Worker</h2>
+          <p>
+            Description: You have gained the ability to work remotely via coding while being able to travel at the same time.
+          </p>
+        </div>
+        <div class="goal-card">
+          <h2>Mobile Mansion</h2>
+          <p>
+            Description: You have built a vehicle into a home that you can live in indefinetely. 
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Blog Section -->
+    <section id="blog">
+      <h2>Work Blog</h2>
+      <div class="blog-entry">
+        <h2>July 2, 2022</h2>
+        <p>
+          <span class="blog-date">12:30 PM : 1 Hour </span>Start by making this
+          document and uploading it to netlify.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
